@@ -31,6 +31,11 @@ let minus_one = -1.
 let infinity = Stdlib.infinity
 let neg_infinity = Stdlib.neg_infinity
 let nan = Stdlib.nan
+let quiet_nan = nan
+external float_of_bits : int64 -> float
+  = "caml_int64_float_of_bits" "caml_int64_float_of_bits_unboxed"
+  [@@unboxed] [@@noalloc]
+let signaling_nan = float_of_bits 0x7F_F0_00_00_00_00_00_01L
 let is_finite (x: float) = x -. x = 0.
 let is_infinite (x: float) = 1. /. x = 0.
 let is_nan (x: float) = x <> x
