@@ -110,9 +110,23 @@ val nan : float
 (** A special floating-point value denoting the result of an
     undefined operation such as [0.0 /. 0.0].  Stands for
     'not a number'.  Any floating-point operation with [nan] as
-    argument returns [nan] as result.  As for floating-point comparisons,
+    argument returns [nan] as result, unless otherwise specified in
+    IEEE 754 standard.  As for floating-point comparisons,
     [=], [<], [<=], [>] and [>=] return [false] and [<>] returns [true]
-    if one or both of their arguments is [nan]. *)
+    if one or both of their arguments is [nan].
+
+    [nan] is [quiet_nan] since 5.1; it was a signaling NaN before. *)
+
+val signaling_nan : float
+(** Signaling NaN. The corresponding signals do not raise OCaml exception,
+    but the value can be useful for interoperability with C libraries.
+
+    @since 5.1 *)
+
+val quiet_nan : float
+(** Quiet NaN.
+
+    @since 5.1 *)
 
 val pi : float
 (** The constant pi. *)
